--- a/la-mia-pizzeria-static/Views/Pizza/Index.cshtml
+++ b/la-mia-pizzeria-static/Views/Pizza/Index.cshtml
@@ -16,6 +16,7 @@
 <body>
     
     <h1 class="text-center text-danger">Pizze presenti nel menu</h1>
+    <a href="@Url.Action("Create", "Pizza")">Crea nuova pizza</a>
     <div class="container d-flex gap-4">
     @if (pizze.Length is 0)
     {
@@ -26,14 +27,7 @@
         @foreach (var pizza in pizze)
         {
 
-            <div class="card" style="width: 18rem; height: 25rem;">
-                <img src="@pizza.Image" class="card-img-top" alt="Pizza Margherita">
-                <div class="card-body">
-                    <h5 class="card-title  ms-lg-3"><a href="@Url.Action("Detail", "Pizza", new { Id = pizza.Id })">@pizza.Name</a></h5>
-                    <p class="card-text  ms-lg-3">@pizza.Description</p>
-                    <h6 class="ms-lg-3">@pizza.Price $</h6>
-                </div>
-            </div>
+                @await Html.PartialAsync("_PizzaRow", pizza);
         }
     }
     </div>
