--- a/la-mia-pizzeria-static/wwwroot/css/site.css
+++ b/la-mia-pizzeria-static/wwwroot/css/site.css
@@ -30,3 +30,17 @@ img{
 .card {
     height: 20rem !important;
 }
+
+.pad {
+    padding: 16px;
+}
+
+.form-field {
+    display: grid;
+    gap: 4px;
+    min-width: 400px;
+}
+
+    .form-field textarea {
+        resize: vertical;
+    }
